Apply camel
